@@ -1,2 +1,6 @@
 <header>Create alias websites by</header>
- A domain alias, also know as domain parking or domain forwarding, is a new domain that simply forwards web requests and email to the primary domain that it is an alias of.  There are several types of alias available.  Currently, web traffic can be directed to the primary domain via a set of ProxyPass rules, a Redirect rule, or simply adding a ServerAlias to the parent domain.
+
+A domain alias, also know as domain parking or domain forwarding, is a new domain that simply forwards web requests and email to the primary domain that it is an alias of.  There are several types of alias available.  Currently, web traffic can be directed to the primary domain via a set of ProxyPass rules, a Redirect rule, a RedirectMatch rule, or simply adding a ServerAlias to the parent domain.<p>
+
+<footer>
+
