@@ -724,3 +724,4 @@ Added support for migrating domains from Plesk 8 backups.
 The migration function will use the username and password from the original domain where possible, removing the need to specify them manually when on the migration form or as parameters to migrate-domain.pl. For Plesk backups the original username and password can be retrieved, while for Ensim and cPanel only the username can be found automatically.
 The System Settings category on the left menu of the framed theme is now broken down into 5 smaller menus, to make things easier to find.
 Updated the Xoops script installer to automate the database connection and administration user creation, so that you no longer have to go through the install wizard manually.
+Added an option to the Create alias websites by setting in server templates to use RedirectMatch instead of Redirect, which is more Google-friendly for parked domains.
